src/objects/SPE_Error_Log__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Error Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DmlFieldNames__c</fullName>
        <label>DmlFieldNames</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DmlType__c</fullName>
        <label>DmlType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Cause__c</fullName>
        <label>Error Cause</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Line__c</fullName>
        <label>Error Line</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Exception_Type__c</fullName>
        <label>Exception Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Module_Name__c</fullName>
        <label>Module Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SPE_Error_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VisualforcePage_Name__c</fullName>
        <label>VisualforcePage Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>SPE2 Error Log</label>
    <nameField>
        <displayFormat>EL-{00000}</displayFormat>
        <label>Error Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SPE2 Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>